# cpe-426-project

./: .gitignore  lab.txt  writeup.docx  writeup.md
.github/workflows/: go-bin.yml
binary/: Cargo.toml
binary/src/: main.rs
cw-lab/: Dockerfile  Makefile  README.md
cw-lab/chipwhisperer/chipwhisperer-minimal/: README.md  setup.py
cw-lab/chipwhisperer/chipwhisperer-minimal/chipwhispererminimal/: __init__.py
cw-lab/chipwhisperer/firmware/fpgas/fpga-common/: .gitignore  README.md
cw-lab/chipwhisperer/firmware/fpgas/fpga-common/hdl/: cdc_bus.v  crc_ss2.v  fifo_async.v  fifo_sync.v  ss2.v  uart_core.v
cw-lab/chipwhisperer/jupyter/courses/sca101/: Lab 2_1A - Instruction Power Differences (HARDWARE).ipynb  Lab 2_1A - Instruction Power Differences (MAIN).ipynb
project/: .gitignore  README.md  writeup.md
project/binary/: 70-basys3.rules  Cargo.toml  Makefile
project/binary-go/: Makefile  aes.go  aes_test.go  go.mod  go.sum  main.go
project/binary-python/: binary.py  derive.py  payload  requirements.txt
project/binary/src/: main.rs
project/forImposters/: what-we-did.md
project/forImposters/extra-files/: BBPulseGeneratorBit0.sv  BBPulseGeneratorBit1.sv  Basys3_constraints.xdc  Buffer.sv  BufferWrapper.sv  CompleteWrapper.sv  PowerAmplifier.sv  RFPG0.sv  RFPG1.sv  UWBTransmitterWrapper.sv  uwb_trans.xpr
project/hdl/: aes128_fast.vhd  aes_package.vhd  baud_rate_generator.v  fifo.sv  fifo.v  key_expander.vhd  trojan_top.v  uart_const.xdc  uart_test.v  uart_top.v  uart_transmitter.v
puf-lab/: puf-lab.xpr
puf-lab/puf-lab.srcs/sources_1/new/: RO.vhd
(+17 files in other folders)
