[package]
name = "binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
anyhow = "1.0.75"
axum = "0.6.20"
formatx = "0.2.1"
hex = "0.4.3"
len-trait = "0.6.1"
rand = "0.8.5"
random-string = "1.0.1"
serde = { version = "1.0.190", features = ["derive"] }
serialport = "4.2.2"
tokio = { version = "1.33.0", features = ["net", "rt", "macros", "rt-multi-thread"] }
